@@ -14,6 +14,7 @@ Version 1.7.7+svn:
 * User interface:
    * Fixed storyscreen buttons occasionally disappearing.
    * Improve display order of unit healing (patch #1343)
+   * Switch to the new MP lobby
 
 
 Version 1.7.7:
