@@ -15,6 +15,7 @@ Version 1.7.7+svn:
    * Improve display order of unit healing (patch #1343)
    * Fix the new-widgets addon list dialog
    * Add fallback scrollbars if a window doesn't fit (bug #13180)
+   * Switch to the new MP lobby
 
 Version 1.7.7:
  * AI:
